[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
chrono = { version = "0.4.23", features = ["serde", "wasmbind"] }
serde_with = "1.10"
gloo-utils = { version = "0.1.6", features = ["serde"] }
js-sys = "0.3.60"
